Extract default static libraries list